--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		      <a href="#">Top-up</a>
 		      <a href="#">Log In</a>
 		    </div>
+		    <div class="clear"></div>
 	    </div>
 	  </header>
 	    <div class="top-wrapper">
